--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "faker (>=38.0.0,<39.0.0)",
     "sqlalchemy (>=2.0.44,<3.0.0)",
     "psycopg2-binary (>=2.9.11,<3.0.0)",
-    "pandera (>=0.26.1,<0.27.0)"
+    "pandera (>=0.26.1,<0.27.0)",
+    "python-dotenv (>=1.2.1,<2.0.0)"
 ]
 
 
